# cataloguer

./: .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
assets/: banned.json  cards.json  main.css  old_cards.json  sets.json  testing_cards.json  trasho_corp.json  trasho_runner.json  trashobusto.json
src/: lib.rs  main.rs  parse.rs  query.pest  search.rs  structs.rs  web.rs
templates/: base.html  cardpage.html  cards.html  hello.html  index.html  search-bar.html  search_error.html  sets.html  syntax.html
