[package]
name = "cataloguer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4"
axum = { version = "0.7", features = ["tokio", "http1"] }
axum-htmx = "0.5"
pest = "2.8.5"
pest_derive = "2.8.5"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1.37", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

